--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,46 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+div {
+	margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+	margin-left: 180px;
+	background-color: powderblue;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+img {
 	display: block;
+	margin: 0 auto;
+	width: 50%;
+	height: 30%;
 }
-body {
-	line-height: 1;
+.Banner_Image{
+	width: 100%;
+	height: 25%;
+	background-color: black;
 }
-ol, ul {
-	list-style: none;
+html {
+	background-color: red;
 }
-blockquote, q {
-	quotes: none;
+header h1 {
+	text-align: center;
+	font-size: 64px;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+h2 {
+	font-size: 2em;
+	text-align: center;
 }
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+p {
+	text-align: center;
+	display: block;
+	font-size: 1.5em;
+	padding: 25px 100px 25px 100px;
+}
+* {
+	margin: 0;
+}
+p.overview {
+	border: 1px solid black;
+}
+ol {
+	text-align: left;
+	font-size: 1.5em;
 }
